@@ -1,5 +1,9 @@
 #VERSION 0.7.99#
 
+*  added class Peak_View_Cache > all cache logic inside Peak_View_Render have been moved there. There is no change
+                                 in how we use view cache but it lightweight Peak_View_Render 
+                                 when we do not use cache functionnality
+
 *  Peak_View_Render > added methods deleteCache()
 
 *  View_Helper_Debug > added methods getControllerSource() and getScriptSource()
